Updated the slides.

--- a/pre.tex
+++ b/pre.tex
@@ -16,7 +16,7 @@
 
 \westlakeset{
   title      = Band Structure of 2D Kagome Lattice,
-  subtitle   = Presentation of \textsf{Advanced Quantum Mechanics},
+  subtitle   = Final Project Presentation,
   author     ={ \texorpdfstring{Mingyu Xia (夏明宇) |
                 \textit{Department of Physics, Westlake University}}%
                   {Mingyu Xia}, Mingyu Xia},
@@ -68,7 +68,7 @@
     \begin{itemize}
       \item Marked as \textcolor{blue}{$A$ (blue)}, \textcolor{red}{$B$ (red)},
       and \textcolor{Green}{$C$ (green)}, respectively
-      \item Hops' magnitude between different type of sites are different
+      \item Hops' magnitude between different types of sites is different
     \end{itemize}
   \end{block}
   \begin{figure}[htbp]
@@ -195,9 +195,9 @@
     the NN sites
     \[
       \hat o_{\bm r+\bm\delta_i} = \frac1{\sqrt N} \sum_{\bm k}
-        \upe^{\iu\bm k(\cdot\bm r+\bm\delta_i)} \hat o_{\bm k}, \quad
+        \upe^{\iu\bm k\cdot(\bm r+\bm\delta_i)} \hat o_{\bm k}, \quad
       \hat o_{\bm r+\bm\delta_i}^\dagger = \frac1{\sqrt N} \sum_{\bm k}
-        \upe^{-\iu\bm k(\cdot\bm r+\bm\delta_i)} \hat o_{\bm k}
+        \upe^{-\iu\bm k\cdot(\bm r+\bm\delta_i)} \hat o_{\bm k}
     \]
     Operators $\hat o = \{\hat a, \hat b, \hat c\}$.
   \end{block}
